# fs-generic

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yaml
regen/: Cargo.toml
regen-doc/: Cargo.toml
regen-doc/data/: config.toml
regen-doc/src/: main.rs
regen-src/: Cargo.toml
regen-src/data/: header.rs
regen-src/src/: main.rs  print.rs  rustdoc_util.rs  visit.rs  visitor.rs
regen/src/: main.rs
src/: generated.rs  lib.rs
