[package]
name = "regen-doc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
rustdoc-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
